2007-02-15  Lluis Sanchez Gual <lluis@novell.com> 

	* Parser/LanguageItemVisitor.cs, Parser/TypeVisitor.cs: When resolving
	  a field reference, look for static members if instance members
	  can't be found. Fixes bug #80841.

2007-02-12  Lluis Sanchez Gual <lluis@novell.com> 

	* CSharpBinding.mdp: Added project reference for NRefactory.
	* Parser/CSharpVisitor.cs: Collect parameter flags when parsing a
	  method. Fixes bug #80814.

2007-02-12  Lluis Sanchez Gual <lluis@novell.com> 

	* Gui/CSharpTextEditorExtension.cs: Allow crossing line boundaries when
	  looking for tokens. Fixes bug #80719.
	* CSharpBindingCompilerManager.cs: Handle internal packages.

2007-02-09  Lluis Sanchez Gual <lluis@novell.com> 

	* CSharpAmbience.cs: When converting a class, honor
	  UseFullyQualifiedName flag.
	* Makefile.am: distcheck fixes

2007-02-07  Lluis Sanchez Gual <lluis@novell.com> 

	* CSharpBinding.mdp: Updated.
	* gtk-gui/CSharpBinding.CodeGenerationPanelWidget.cs,
	  gtk-gui/gui.stetic: Translation fixes.

2007-02-06  Lluis Sanchez Gual <lluis@novell.com> 

	* Gui/OverrideCompletionData.cs: Moved from CSharpTextEditorExtension.
	* Gui/CSharpParameterDataProvider.cs, Gui/CSharpTextEditorExtension.cs,
	  CSharpBinding.mdp, Makefile.am: Implemented support for parameter
	  information window.
	* Parser/Resolver.cs: When searching a class, look in the calling class
	  namespace before looking in using directives. Some fixes for
	  generic types.
	* Parser/CodeGenerator.cs: Some fixes for generic types.
	* Parser/SharpDevelopTree/ReturnType.cs: Use our own system type table,
	  since the one from NRefactory has some VB types and does case
	  insensitive lookups.
	* CSharpAmbience.cs: Added some ConvertTypeName calls to show the
	  correct name for instantiated generic types.

2007-02-05  Lluis Sanchez Gual <lluis@novell.com> 

	* CSharpBinding.mdp,
	  gtk-gui/CSharpBinding.CodeGenerationPanelWidget.cs,
	  gtk-gui/gui.stetic, Makefile.am: i18n fixes.
