@@ -237,6 +237,13 @@ namespace CSharpBinding.Parser
 			
 			LanguageItemVisitor itemVisitor = new LanguageItemVisitor (this);
 			ILanguageItem item = expr.AcceptVisitor (itemVisitor, null) as ILanguageItem;
+			
+			if (item == null && expr is BinaryOperatorExpression) {
+				// The expression parser does not correctly parse individual generic type names.
+				// Try resolving again but using a more complex expression.
+				return ResolveIdentifier (fileCompilationUnit, id + "()", line, col);
+			}
+			
 			return item;
 		}
 
