@@ -1,5 +1,10 @@
 2007-02-15  Lluis Sanchez Gual <lluis@novell.com> 
 
+	* Parser/Resolver.cs, Parser/LanguageItemVisitor.cs: Properly resolve
+	  generic type identifiers. Fixes bug #80840.
+
+2007-02-15  Lluis Sanchez Gual <lluis@novell.com> 
+
 	* Parser/LanguageItemVisitor.cs, Parser/TypeVisitor.cs: When resolving
 	  a field reference, look for static members if instance members
 	  can't be found. Fixes bug #80841.
